[gd_scene load_steps=27 format=3 uid="uid://1m8txa8wqk3b"]

[ext_resource type="Script" uid="uid://cp7mdmn6uqv3r" path="res://Enemy/script/Charger.gd" id="1_kmquf"]
[ext_resource type="Shader" uid="uid://cf7npyvdymcpr" path="res://etc/HitFlash.gdshader" id="2_vuk24"]
[ext_resource type="Resource" uid="uid://ghbcblcvlkoq" path="res://etc/StatsEffectAmountResource.tres" id="2_wnno6"]
[ext_resource type="Texture2D" uid="uid://cgthr5v7xegjq" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f0.png" id="3_o6uud"]
[ext_resource type="Script" uid="uid://cmfxxtjwquiq" path="res://etc/HitFlash.gd" id="4_7i4ed"]
[ext_resource type="PackedScene" uid="uid://lbsy10cwro8n" path="res://hitboxes/soft_collision.tscn" id="5_5in0c"]
[ext_resource type="Script" uid="uid://c5kv4lxt7e20v" path="res://States/StateController.gd" id="6_0if4c"]
[ext_resource type="Script" uid="uid://cskxtrru8gnf4" path="res://Enemy/script/MoveCharger.gd" id="7_whk8j"]
[ext_resource type="Script" uid="uid://dvaqyd5s3jc47" path="res://States/Enemy/dead.gd" id="8_ak0by"]
[ext_resource type="Texture2D" uid="uid://bvrcapja8vnev" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/ui (new)/crosshair_1.png" id="9_8deb3"]
[ext_resource type="Script" uid="uid://cpy4nmxnjnxv3" path="res://Enemy/script/TakingDamageEnemy.gd" id="10_t0pnl"]
[ext_resource type="Texture2D" uid="uid://babyitvpx83c5" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f1.png" id="11_wnydv"]
[ext_resource type="Texture2D" uid="uid://bhsgufiyldnfa" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f2.png" id="12_gbw1h"]
[ext_resource type="Texture2D" uid="uid://jxv8s5motmcj" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f3.png" id="13_2aojr"]
[ext_resource type="Texture2D" uid="uid://cyawrtitrt16p" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f4.png" id="14_v7nv3"]
[ext_resource type="Texture2D" uid="uid://g51h1cp1ccny" path="res://resource/v1.1 dungeon crawler 16X16 pixel pack/enemies/goblin/goblin_run_anim_f5.png" id="15_hd1kt"]
[ext_resource type="PackedScene" uid="uid://qlvig256hsqp" path="res://UI/Bars/Healthbar.tscn" id="16_ibvk1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tjqs5"]
resource_local_to_scene = true
shader = ExtResource("2_vuk24")
shader_parameter/hit_flash_color = Color(1, 1, 1, 1)
shader_parameter/hit_flash_on = false

[sub_resource type="CircleShape2D" id="CircleShape2D_gmoxm"]
radius = 24.7608

[sub_resource type="GDScript" id="GDScript_l34si"]
script/source = "extends Node
var parent = get_parent()

func get_movement_direction():
	MakePath()
	
func MakePath():
	if parent.player != null:
		parent.navAgent.target_position = parent.player.global_position
		##$AnimatedSprite2D.play(\"run\")
		##if(parent.player.position.x - parent.position.x) < 0:
		##	$AnimatedSprite2D.flip_h = true
		##else:
			##$AnimatedSprite2D.flip_h = false
	##else:
		##$AnimatedSprite2D.play(\"idle\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lm1mg"]
size = Vector2(54.5, 41)

[sub_resource type="Animation" id="Animation_kr35j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o6uud")]
}

[sub_resource type="Animation" id="Animation_ldv1r"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_f14eg"]
resource_name = "run"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_o6uud"), ExtResource("11_wnydv"), ExtResource("12_gbw1h"), ExtResource("13_2aojr"), ExtResource("14_v7nv3"), ExtResource("15_hd1kt")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yv68"]
_data = {
&"RESET": SubResource("Animation_kr35j"),
&"idle": SubResource("Animation_ldv1r"),
&"run": SubResource("Animation_f14eg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ylwy"]
size = Vector2(71.843, 67.2344)

[node name="Charger" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 21
script = ExtResource("1_kmquf")
amount_dic = ExtResource("2_wnno6")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tjqs5")
position = Vector2(-4, -1)
scale = Vector2(4.75, 4.4375)
texture = ExtResource("3_o6uud")
script = ExtResource("4_7i4ed")

[node name="SoftCollision" parent="." instance=ExtResource("5_5in0c")]
position = Vector2(-0.999996, 58)
scale = Vector2(0.755759, 0.0916106)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2(0.661594, -346.347)
shape = SubResource("CircleShape2D_gmoxm")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="AttackWindup" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="StateControl" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("6_0if4c")
starting_state = NodePath("Move")

[node name="Move" type="Node" parent="StateControl" node_paths=PackedStringArray("dead_state", "move_state")]
script = ExtResource("7_whk8j")
dead_state = NodePath("../Dead")
move_state = NodePath(".")

[node name="Dead" type="Node" parent="StateControl"]
script = ExtResource("8_ak0by")

[node name="Timer" type="Timer" parent="."]

[node name="MovementController" type="Node" parent="."]
script = SubResource("GDScript_l34si")

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Target" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -24)
rotation = -3.14159
scale = Vector2(2.28506, -1.71179)
texture = ExtResource("9_8deb3")

[node name="Front" type="Area2D" parent="."]
visible = false
position = Vector2(-8, 19)
collision_layer = 138
collision_mask = 138
script = ExtResource("10_t0pnl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front"]
position = Vector2(6.25, -19)
shape = SubResource("RectangleShape2D_lm1mg")

[node name="CollisionTimer" type="Timer" parent="."]

[node name="TurnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5yv68")
}

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="Attack" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-36, 24)
collision_layer = 64
collision_mask = 69

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(34, -26.5)
scale = Vector2(0.91867, 0.907274)
shape = SubResource("RectangleShape2D_0ylwy")

[node name="CurseTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Healthbar" parent="." instance=ExtResource("16_ibvk1")]
visible = false
z_index = 3
offset_left = -42.0
offset_top = -46.0
offset_right = 42.0
offset_bottom = -39.0

[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="StateControl/Move" method="_on_collision_timer_timeout"]
[connection signal="timeout" from="TurnTimer" to="StateControl/Move" method="_on_turn_timer_timeout"]
[connection signal="timeout" from="FootstepTimer" to="." method="_on_footstep_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="StateControl/Move" method="_on_stun_timer_timeout"]
[connection signal="area_entered" from="Attack" to="StateControl/Move" method="_on_attack_area_entered"]
[connection signal="area_exited" from="Attack" to="StateControl/Move" method="_on_attack_area_exited"]
[connection signal="body_entered" from="Attack" to="StateControl/Move" method="_on_attack_body_entered"]
[connection signal="timeout" from="CurseTimer" to="." method="_on_curse_timer_timeout"]

[editable path="SoftCollision"]
